@@ -2,6 +2,8 @@ CHANGE LOG
 
 2011-02-14
 
+* fixed issue with description column causing the html to break when the module/dist description
+  contained greater than or less than signs
 * fixed issue where urls that that had escaped characters would not work except in Firefox
 * now using json instead of jsonp ajax calls -- this fixes an issue with the loader image never
   disappearing when searching an invalid author
